--- a/Views/HomeView.xaml
+++ b/Views/HomeView.xaml
@@ -6,6 +6,7 @@
              xmlns:local="clr-namespace:InventoryManager.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"></ColumnDefinition>
@@ -96,86 +97,114 @@
                 Command="{Binding SearchPartCommand}"/>
         </StackPanel>
 
-        <!-- Row 5 Place this in stack panel?-->
-        <DataGrid x:Name="dataGridProducts"
-                    HorizontalAlignment="Left"
-                    Width="auto"
-                    AutoGenerateColumns="False"
-                    Grid.Column="1"
-                    Grid.Row="5"
+        <!-- Row 5 -->
+        <StackPanel Orientation="Horizontal" 
+                    Grid.Column="1" Grid.Row="5"
                     Grid.RowSpan="5"
-                    MinColumnWidth="65"
-                    ColumnWidth="*"
+                    Margin="0 5 0 5"
+                    x:Name="productsStackpanel">
+            
+            <DataGrid x:Name="dataGridProducts"
+                    AutoGenerateColumns="False"
+                    HorizontalAlignment="Left"
+                    MaxHeight="120"
+                    Width="285"
                     IsReadOnly="True"
                     CanUserResizeRows="False"
                     HeadersVisibility="Column"
                     ItemsSource="{Binding Products}"
                     SelectionMode="Single"
                     SelectedItem="{Binding SelectedProduct, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
-            
-            <DataGrid.Columns>
-                <DataGridTextColumn
+
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridCell}">
+                        <Style.Triggers>
+                            <Trigger Property="DataGridCell.IsSelected" Value="True">
+                                <Setter Property="Background" Value="#FF008BFF"/>
+                                <Setter Property="BorderBrush" Value="#FF0074FF"/>
+                                <Setter Property="Foreground" Value="AliceBlue"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.Resources>
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn
                     Header="Product ID"
                     Width="auto"
                     Binding="{Binding ProductID}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Product Name"
                     Width="auto"
                     Binding="{Binding Name}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Price"
                     Width="auto"
                     Binding="{Binding Price}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Inventory"
-                    Width="auto"
+                    Width="*"
                     Binding="{Binding Inventory}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <DataGrid x:Name="dataGridParts"
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
+        
+        <StackPanel Orientation="Horizontal" 
+                    Grid.Column="5" Grid.Row="5"
+                    Grid.RowSpan="5"
+                    Margin="50 5 0 5"
+                    x:Name="partsStackPanel">
+            
+            <DataGrid x:Name="dataGridAllParts"
                 AutoGenerateColumns="False"
-                Grid.Column="5" Grid.ColumnSpan="3"
-                Grid.Row="5" Grid.RowSpan="5"
-                ColumnWidth="*"
-                MinColumnWidth="71"
-                HorizontalAlignment="Left"       
-                Padding="0" Margin="50,0,0,0"
+                HorizontalAlignment="Right"
+                MaxHeight="120"
+                Width="285"
                 IsReadOnly="True"
-                MaxHeight="200"
                 CanUserResizeRows="False"
                 HeadersVisibility="Column"
-                ScrollViewer.CanContentScroll="True"
-                ScrollViewer.VerticalScrollBarVisibility="Auto"
                 ItemsSource="{Binding Parts}"
                 SelectionMode="Single"
                 SelectedItem="{Binding SelectedPart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
-            <DataGrid.Columns>
-                <DataGridTextColumn
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridCell}">
+                        <Style.Triggers>
+                            <Trigger Property="DataGridCell.IsSelected" Value="True">
+                                <Setter Property="Background" Value="#FF008BFF"/>
+                                <Setter Property="BorderBrush" Value="#FF0074FF"/>
+                                <Setter Property="Foreground" Value="AliceBlue"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.Resources>
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn
                     Header="Part ID"
                     Width="auto"
                     Binding="{Binding PartID}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Part Name"
                     Width="auto"
                     Binding="{Binding Name}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Price"
                     Width="auto"
                     Binding="{Binding Price}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Inventory"
                     Width="*"
                     Binding="{Binding Inventory}"/>
-            </DataGrid.Columns>
-        </DataGrid>
+                </DataGrid.Columns>
+            </DataGrid>
+        </StackPanel>
 
         <!-- Row 10 -->
         <StackPanel Orientation="Horizontal" 
