--- a/Views/ModifyPartView.xaml
+++ b/Views/ModifyPartView.xaml
@@ -133,9 +133,8 @@
             <TextBox
                  Width="100" Height="20"
                  Margin="65 0 0 0"
-                 PreviewTextInput="PreviewPriceInput"
                  DataObject.Pasting="TextBox_PricePasting"
-                 Text="{Binding PartPrice, StringFormat={}{0:C}, UpdateSourceTrigger=PropertyChanged}"/>
+                 Text="{Binding PartPrice, UpdateSourceTrigger=PropertyChanged}"/>
         </StackPanel>
 
         <!-- Row 9 -->
