--- a/Views/AddProductView.xaml
+++ b/Views/AddProductView.xaml
@@ -7,30 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <!--https://www.codeproject.com/Articles/15239/Validation-in-Windows-Presentation-Foundation-->
-        <Grid.Resources>
-            <Style TargetType="{x:Type TextBox}">
-                <Setter Property="Validation.ErrorTemplate">
-                    <Setter.Value>
-                        <ControlTemplate>
-                            <DockPanel LastChildFill="True">
-                                <TextBlock DockPanel.Dock="Right" 
-                                    Foreground="Red"
-                                    Margin="5 0 0 0"
-                                    FontSize="10pt"
-                                    VerticalAlignment="Center"
-                                    Text="{Binding ErrorContent}"/>
-                                <Border BorderBrush="Red" BorderThickness="1">
-                                    <AdornedElementPlaceholder />
-                                </Border>
-                            </DockPanel>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-        </Grid.Resources>
-        
-        
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="20"></ColumnDefinition>
             <ColumnDefinition Width="auto"></ColumnDefinition>
@@ -74,45 +50,39 @@
                Grid.Row="2" 
                FontSize="20" FontWeight="Bold" 
                Content="Inventory Manager - Add Product"/>
-
-        <!-- Row 3 -->
-        <TextBlock Text="{Binding Parts.Count, StringFormat=All Candidate Parts (\{0\})}"
-            Grid.Column="1"
-            Grid.Row="3" 
-            FontSize="16"/>
-
-        <!-- Row 4 -->
-        <StackPanel Orientation="Horizontal"
-                    Grid.Column="1" Grid.Row="4"
-                    Margin="0 5 0 5">
-            <TextBox x:Name="partSearchBox"
-                Width="200" Height="20"
-                Text="{Binding SearchBoxContents, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"/>
-
-            <Button
-                Width="75" Height="20"
-                Margin="55 0 0 0"
-                Content="Search"
-                Command="{Binding SearchPartCommand}"/>
-        </StackPanel>
         
         <StackPanel Orientation="Horizontal"
+                    VerticalAlignment="Center"
                     Grid.Column="2" Grid.Row="4"
-                    Margin="20 0 0 0">
-            <Label  Content="Product ID" />
+                    Margin="20 0 0 5">
+            <Label  Content="Product ID" Width="100"/>
             <TextBox Width="100" Height="20" 
-                 Margin="34 0 0 0" 
                  IsEnabled="false"
                  Text="{Binding ProductID, Mode=OneWay}" />
         </StackPanel>
         
 
-        <!-- Row 5 -->
-        <StackPanel Orientation="Horizontal" 
-                    Grid.Column="1" Grid.Row="5"
+        <!-- Row 4 -->
+        <StackPanel Orientation="Vertical" 
+                    Grid.Column="1" Grid.Row="4"
                     Grid.RowSpan="5"
                     x:Name="dgStackPanel">
+            <TextBlock Text="{Binding Parts.Count, StringFormat=All Candidate Parts (\{0\})}"
+            FontSize="16"/>
+            
+            <StackPanel Orientation="Horizontal"
+                    Margin="0 5 0 5">
+                <TextBox x:Name="partSearchBox"
+                Width="200" Height="20"
+                Text="{Binding PartSearchBoxContents, Mode=OneWayToSource, UpdateSourceTrigger=PropertyChanged}"/>
 
+                <Button
+                Width="75" Height="20"
+                Margin="55 0 0 0"
+                Content="Search"
+                Command="{Binding SearchPartCommand}"/>
+            </StackPanel>
+            
             <DataGrid x:Name="dataGridAllParts"
                 AutoGenerateColumns="False"
                 HorizontalAlignment="Left"
@@ -123,6 +93,7 @@
                 HeadersVisibility="Column"
                 ItemsSource="{Binding Parts}"
                 SelectionMode="Single"
+                SelectionChanged="dg_OnSelectionChanged"
                 SelectedItem="{Binding SelectedPart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
                 <DataGrid.Resources>
@@ -159,68 +130,120 @@
                     Binding="{Binding Inventory}"/>
                 </DataGrid.Columns>
             </DataGrid>
+
+            <Button
+                Padding="5"
+                Margin="272 5 0 0"
+                Content="Add Part"
+                IsEnabled="{Binding PartSelected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
+                Command="{Binding Path=AddAssociatedPartCommand}"/>
         </StackPanel>
 
         <!-- Row 5 -->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2" Grid.Row="5"
-                    Margin="20 0 0 0">
-            <Label HorizontalAlignment="Left" Content="Name" />
-            <TextBox
-                 Width="100" Height="20" 
-                 Margin="58 0 0 0"
-                 Text="{Binding ProductName, UpdateSourceTrigger=PropertyChanged}"/>
+                    MaxWidth="300" Margin="20 0 0 5">
+            <Label Content="Name" Width="100"/>
+
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel.Resources>
+                    <DataTemplate DataType="{x:Type ValidationError}">
+                        <TextBlock Text="{Binding ErrorContent}" Foreground="White" Background="Red" Padding="2" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                </StackPanel.Resources>
+                <TextBox x:Name="ProductNameTextBox"
+                    HorizontalAlignment="Left"
+                    Width="100" Height="20" 
+                    Text="{Binding ProductName, UpdateSourceTrigger=PropertyChanged}"/>
+                <ContentPresenter Content="{Binding ElementName= ProductNameTextBox, Path=(Validation.Errors).CurrentItem}" HorizontalAlignment="Left"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Row 6 -->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2" Grid.Row="6"
-                    Margin="0 0 0 0">
-            <Label Grid.Column="5" Grid.Row="6" Grid.RowSpan="1" Margin="20 0 0 0" Content="Inventory" />
-            <TextBox
-                 Width="100" Height="20"
-                 Margin="40 0 0 0"
-                 PreviewTextInput="PreviewIntInput"
-                 DataObject.Pasting="TextBox_IntPasting"
-                 Text="{Binding ProductInventory, UpdateSourceTrigger=PropertyChanged}"/>
+                    MaxWidth="300" Margin="20 0 0 5">
+            <Label Content="Inventory" Width="100"/>
+
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel.Resources>
+                    <DataTemplate DataType="{x:Type ValidationError}">
+                        <TextBlock Text="{Binding ErrorContent}" Foreground="White" Background="Red" Padding="2" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                </StackPanel.Resources>
+                <TextBox x:Name="ProductInventoryTextBox"
+                    HorizontalAlignment="Left"
+                    Width="100" Height="20"
+                    PreviewTextInput="PreviewIntInput"
+                    DataObject.Pasting="TextBox_IntPasting"
+                    Text="{Binding ProductInventory, UpdateSourceTrigger=PropertyChanged}"/>
+                <ContentPresenter Content="{Binding ElementName= ProductInventoryTextBox, Path=(Validation.Errors).CurrentItem}" HorizontalAlignment="Left"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Row 7 -->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2" Grid.Row="7"
-                    Margin="20 0 0 0">
-            <Label Content="Price" />
-            <TextBox
+                    MaxWidth="300" Margin="20 0 0 5">
+            <Label Content="Price" Width="100"/>
+
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel.Resources>
+                    <DataTemplate DataType="{x:Type ValidationError}">
+                        <TextBlock Text="{Binding ErrorContent}" Foreground="White" Background="Red" Padding="2" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                </StackPanel.Resources>
+                <TextBox x:Name="ProductPriceTextBox"
+                 HorizontalAlignment="Left"
                  Width="100" Height="20"
-                 Margin="64 0 0 0"
                  DataObject.Pasting="TextBox_PricePasting"
                  Text="{Binding ProductPrice, UpdateSourceTrigger=LostFocus}"/>
+                <ContentPresenter Content="{Binding ElementName= ProductPriceTextBox, Path=(Validation.Errors).CurrentItem}" HorizontalAlignment="Left"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Row 8 -->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2" Grid.Row="8"
-                    Margin="20 0 0 0">
-            <Label Content="Min" />
-            <TextBox
+                    MaxWidth="300" Margin="20 0 0 5">
+            <Label Content="Min" Width="100"/>
+
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel.Resources>
+                    <DataTemplate DataType="{x:Type ValidationError}">
+                        <TextBlock Text="{Binding ErrorContent}" Foreground="White" Background="Red" Padding="2" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                </StackPanel.Resources>
+                <TextBox x:Name="ProductMinTextBox"
                  Width="100" Height="20"
-                 Margin="70 0 0 0"
+                 HorizontalAlignment="Left"
                  PreviewTextInput="PreviewIntInput"
                  DataObject.Pasting="TextBox_IntPasting"
                  Text="{Binding ProductMin, UpdateSourceTrigger=PropertyChanged}"/>
+                <ContentPresenter Content="{Binding ElementName= ProductMinTextBox, Path=(Validation.Errors).CurrentItem}" HorizontalAlignment="Left"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Row 9 -->
         <StackPanel Orientation="Horizontal"
                     Grid.Column="2" Grid.Row="9"
-                    Margin="20 0 0 0">
-            <Label Content="Max" />
-            <TextBox
+                    MaxWidth="300" Margin="20 0 0 5">
+            <Label Content="Max" Width="100"/>
+
+            <StackPanel VerticalAlignment="Center">
+                <StackPanel.Resources>
+                    <DataTemplate DataType="{x:Type ValidationError}">
+                        <TextBlock Text="{Binding ErrorContent}" Foreground="White" Background="Red" Padding="2" VerticalAlignment="Center"/>
+                    </DataTemplate>
+                </StackPanel.Resources>
+                <TextBox x:Name="ProductMaxTextBox"
                  Width="100" Height="20"
-                 Margin="68 0 0 0"
+                 HorizontalAlignment="Left"
                  PreviewTextInput="PreviewIntInput"
                  DataObject.Pasting="TextBox_IntPasting"
                  Text="{Binding ProductMax, UpdateSourceTrigger=PropertyChanged}"/>
+                <ContentPresenter Content="{Binding ElementName= ProductMaxTextBox, Path=(Validation.Errors).CurrentItem}" HorizontalAlignment="Left"/>
+            </StackPanel>
         </StackPanel>
 
         <!-- Row 10 -->
@@ -240,34 +263,24 @@
                 Margin="5 0 0 0"
                 Content="Save"
                 IsEnabled="{Binding EnableSave}"
-                Command="{Binding SaveNewProductCommand}"/>
-        </StackPanel>
-        <StackPanel Orientation="Horizontal"
-                    Grid.Column="1" Grid.Row="10"
-                    Margin="0 5">
-            <Button
-                Padding="5"
-                Margin="272 0 0 0"
-                Content="Add Part"
-                IsEnabled="{Binding PartSelected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
-                Command="{Binding Path=AddAssociatedPartCommand}"/>
+                Command="{Binding SaveProductCommand}"/>
         </StackPanel>
 
-        <!-- Row 12 -->
-        <TextBlock Text="{Binding AssociatedParts.Count, StringFormat=Associated Parts (\{0\})}"
-            Grid.Column="1"
-            Grid.Row="12" 
+        <!-- Row 9 -->
+        <StackPanel Orientation="Vertical" 
+                    Grid.Column="1" Grid.Row="9"
+                    Grid.RowSpan="5"
+                    x:Name="dgAPStackPanel">
+
+            <TextBlock Text="{Binding AssociatedParts.Count, StringFormat=Associated Parts (\{0\})}"
             FontSize="16"/>
-
-        <!-- Row 13 -->
-        <DataGrid x:Name="dataGridAssociatedParts"
+            
+            <DataGrid x:Name="dataGridAssociatedParts"
                   AutoGenerateColumns="False"
-                  Grid.Column="1"
                   ColumnWidth="Auto"
                   MinColumnWidth="82"
                   MaxHeight="120"
                   HorizontalAlignment="Left"
-                  Grid.Row="13"
                   Grid.RowSpan="6"
                   IsReadOnly="True"
                   CanUserResizeRows="False"
@@ -276,43 +289,42 @@
                   SelectionMode="Single"
                   SelectedItem="{Binding SelectedAssociatedPart, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
 
-            <DataGrid.Resources>
-                <Style TargetType="{x:Type DataGridCell}">
-                    <Style.Triggers>
-                        <Trigger Property="DataGridCell.IsSelected" Value="True">
-                            <Setter Property="Background" Value="#FF008BFF"/>
-                            <Setter Property="BorderBrush" Value="#FF0074FF"/>
-                            <Setter Property="Foreground" Value="AliceBlue"/>
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </DataGrid.Resources>
-            
-            <DataGrid.Columns>
-                <DataGridTextColumn
+                <DataGrid.Resources>
+                    <Style TargetType="{x:Type DataGridCell}">
+                        <Style.Triggers>
+                            <Trigger Property="DataGridCell.IsSelected" Value="True">
+                                <Setter Property="Background" Value="#FF008BFF"/>
+                                <Setter Property="BorderBrush" Value="#FF0074FF"/>
+                                <Setter Property="Foreground" Value="AliceBlue"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </DataGrid.Resources>
+
+                <DataGrid.Columns>
+                    <DataGridTextColumn
                     Header="Part ID"
                     Width="auto"
                     Binding="{Binding PartID}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Part Name"
                     Width="auto"
                     Binding="{Binding Name}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Price"
                     Width="auto"
                     Binding="{Binding Price}"/>
 
-                <DataGridTextColumn
+                    <DataGridTextColumn
                     Header="Inventory"
                     Width="*"
                     Binding="{Binding Inventory}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-        
-        <!-- Row 19 -->
-        <Button Grid.Column="1" Grid.Row="19"
+                </DataGrid.Columns>
+            </DataGrid>
+
+            <Button
                 HorizontalAlignment="Right"
                 Padding="5"
                 Margin="0 5 0 0"
@@ -320,5 +332,6 @@
                 IsEnabled="{Binding AssociatedPartSelected, Mode=OneWay, UpdateSourceTrigger=PropertyChanged}"
                 Command="{Binding DeleteAssociatedPartCommand}"
                 CommandParameter="{Binding ElementName=dataGridAssociatedParts, Path=SelectedItem}"/>
+        </StackPanel>
     </Grid>
 </UserControl>
